--- a/Canvas/Canvas.csproj
+++ b/Canvas/Canvas.csproj
@@ -155,6 +155,7 @@
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\Canvas.js" />
+    <Content Include="Scripts\fabric.min.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
     <Content Include="Scripts\jquery-3.4.1.slim.js" />
